<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.cyma.myapplication.MainActivity"
    android:weightSum="1">

    <RelativeLayout
        android:id="@+id/firstHalf"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:background="@color/colorPrimaryDark">

        <Button
            android:id="@+id/addA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text= "@string/addA"
            android:onClick="addA"/>

        <Button
            android:id="@+id/addB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/addA"
            android:layout_toRightOf="@+id/addA"
            android:text="@string/addB"
            android:onClick="addB"/>

        <Button
            android:id="@+id/removeA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/addB"
            android:layout_toRightOf="@+id/addB"
            android:text="@string/removeA"
            android:onClick="removeA"/>

        <Button
            android:id="@+id/removeB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/removeA"
            android:layout_toRightOf="@+id/removeA"
            android:text="@string/removeB"
            android:onClick="removeB"/>

        <Button
            android:id="@+id/replacewithA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/replaceWithA"
            android:onClick="replaceWithA"/>

        <Button
            android:id="@+id/replacewithB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/replacewithA"
            android:layout_toEndOf="@id/replacewithA"
            android:layout_toRightOf="@id/replacewithA"
            android:text="@string/replaceWithB"
            android:onClick="replaceWithB"/>

        <Button
            android:id="@+id/clearBS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clearBS"
            android:layout_below="@+id/replacewithA"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="27dp" />

        <Button
            android:id="@+id/count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/clearBS"
            android:layout_marginLeft="18dp"
            android:layout_marginStart="18dp"
            android:layout_toEndOf="@+id/addB"
            android:layout_toRightOf="@+id/addB"
            android:text="backstack count" />

        <Button
            android:id="@+id/addC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addA"
            android:layout_toLeftOf="@+id/addB"
            android:layout_toStartOf="@+id/addB"
            android:onClick="addC"
            android:text="ADD C" />

        <Button
            android:id="@+id/removec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/addC"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:layout_toEndOf="@+id/addA"
            android:layout_toRightOf="@+id/addA"
            android:onClick="removeC"
            android:text="REMOVE C" />

        <Button
            android:id="@+id/replaceWithC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/replacewithB"
            android:layout_toEndOf="@+id/replacewithB"
            android:layout_toRightOf="@+id/replacewithB"
            android:onClick="replaceWithC"
            android:text="REPLACE WITH C" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/secondHalf"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        android:layout_weight="0.5"
        android:orientation="horizontal"
        android:weightSum="1">
        <LinearLayout
            android:layout_weight="0.5"
            android:id="@+id/group1"
            android:orientation="vertical"
            android:background="#ffffff"
            android:layout_height="match_parent"
            android:layout_width="match_parent">
        </LinearLayout>
        <ScrollView
            android:id="@+id/scrollView"
            android:layout_weight="0.5"
            android:background="#f4d742"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/scrollingtext"
                android:text=""
                android:textSize="20sp"
                />
        </ScrollView>

    </LinearLayout>

    </LinearLayout>
